ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
  annotations:
    cloud.google.com/load-balancer-type: "External"
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "true"
    # kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  defaultBackend:
    service:
      name: app-one
      port:
        number: 80
  rules:
    - http:
        paths:
          # - path: /*
          #   pathType: ImplementationSpecific
          - path: /app1/
            pathType: ImplementationSpecific
            backend:
              service:
                name: app-one
                port:
                  number: 80
          - path: /app2/
            pathType: ImplementationSpecific
            backend:
              service:
                name: app-two
                port:
                  number: 80
